--- a/front-end/pages/distribusi-produk/style.css
+++ b/front-end/pages/distribusi-produk/style.css
@@ -65,39 +65,37 @@ main {
 
 .form {
     padding: 1rem;
+    width: 100%; /* penting */
 }
 
 .form-content {
     display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    
+    flex-direction: column;
+    gap: 3rem;
+    padding-top: 3rem;
 }
 
 /* didalam .form */
 .form-input {
     display: flex;
-    padding: 0 0.2rem;
-    width: 400px;
-    justify-content: space-between;
-    align-items: center;
-    border: 1px solid white;
-    border-radius: 0.5rem;
+    gap: 2rem;
 }
 
-input {
-    width: 250px;
-    height: 30px;
+input, select {
+    width: 100%;
+    height: 35px;
     background-color: white;
     color: black;
+    border-radius: 0.5rem;
+    padding: 0 0.2rem;
 }
 
 .form-button {
+    width: 100%;
     display: flex;
     gap: 1rem;
     align-items: end;
     justify-content: end;
-    width: 400px;
 }
 
 .cancel-button, .save-button {
@@ -108,4 +106,16 @@ input {
     height: 30px;
     border: 1px solid white;
     border-radius: 0.5rem;
+}
+
+.img-product {
+    width: 100%;
+}
+
+.img {
+    width: 70%;
+    height: 100%;
+    border-radius: 0.5rem;
+    background-color: white;
+    color: black;
 }
