--- a/front-end/pages/distribusi-produk/style.css
+++ b/front-end/pages/distribusi-produk/style.css
@@ -2,120 +2,121 @@ body {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    background: linear-gradient(90deg, #1a4d1a, #4d774d, #9cada0);
-    background-size: cover;
+    background-color: #118800;
     font-family: "Poppins", sans-serif;
     color: white;
+    width: 100%;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 200px 1fr 1fr;
+    grid-template-rows: 80px 1fr 1fr;
+
+    grid-template-areas:
+        "sidebar header header"
+        "sidebar main main";
 }
 
 header {
+    grid-area: header;
+}
+aside {
+    grid-area: sidebar;
+}
+main {
+    grid-area: main;
+}
+
+.logo-sehub {
+    background-color: #2B2B2B;
+}
+
+.logo-sehub img {
+    width: 100%;
+}
+
+.logo-larbre {
     display: flex;
-    padding: 0 2rem;
     justify-content: space-between;
     align-items: center;
-    height: 50px;
+    color: #2B2B2B;
+    background-color: white;
+    padding-inline: 1rem;
 }
 
-main {
-    padding: 0 2rem;
+.logo-larbre img {
+    width: 50px;
+    height: auto;
 }
 
-.task-bar {
-    display: flex;
-    justify-content: space-between;
-}
-
-.page {
+.menu, .nav {
     display: flex;
     gap: 1rem;
     align-items: center;
 }
 
-/* didalam .page */
-.icon {
-    width: 30px;
-    height: 30px;
-    background-color: white;
-    border-radius: 50%;
+.menu img, .nav img {
+    width: 20px;
 }
 
-.title {
-    font-weight: bold;
-    font-size: 1.5rem;
-}
-/**/
-
-.nav-tgl, .navigation {
-    display: flex;
-    gap: 4rem;
-    align-items: center;
-}
-
-.nav-tgl {
-    font-weight: bold;
-    font-size: 1rem;
-}
-
-.form-section {
-    border: 1px solid white;
-    border-radius: 0.5rem;
-    height: 70vh;
-    display: flex;
-}
-
-.form {
-    padding: 1rem;
-    width: 100%; /* penting */
-}
-
-.form-content {
+/* side-bar */
+.aside {
+    background-color: #2B2B2B;
     display: flex;
     flex-direction: column;
-    gap: 3rem;
-    padding-top: 3rem;
+    justify-content: space-between;
+    height: 100vh;
 }
 
-/* didalam .form */
-.form-input {
+.nav {
+    padding-block: 0.8rem;
+}
+
+.nav a {
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+}
+
+.nav:hover {
+    cursor: pointer;
+}
+
+.aside nav {
     display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 2rem;
 }
 
-input, select {
-    width: 100%;
-    height: 35px;
-    background-color: white;
-    color: black;
-    border-radius: 0.5rem;
-    padding: 0 0.2rem;
+.menu p {
+    font-size: 1.5rem;
+    font-weight: bolder;
 }
 
-.form-button {
-    width: 100%;
+.companies-name {
+    text-align: center;
+    font-size: 0.8rem;
+}
+
+/* main-side */
+.hari-tgl {
     display: flex;
-    gap: 1rem;
-    align-items: end;
     justify-content: end;
-}
-
-.cancel-button, .save-button {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    width: 100px;
-    height: 30px;
-    border: 1px solid white;
-    border-radius: 0.5rem;
+    padding-inline: 1rem;
 }
 
-.img-product {
-    width: 100%;
-}
-
-.img {
-    width: 70%;
-    height: 100%;
-    border-radius: 0.5rem;
+.main-section {
+    margin-inline: 1rem;
+    height: 75vh;
     background-color: white;
-    color: black;
+    border-radius: 12px;
+    color: #2B2B2B;
+}
+
+.main-section a {
+    text-decoration: none;
+    color: #118800;
+    font-weight: bolder;
 }
