--- a/sources/styles/components/form.scss
+++ b/sources/styles/components/form.scss
@@ -25,3 +25,25 @@ form {
     gap: 1rem;
     padding: 1rem;
 }
+
+.main-section-form {
+    display: grid;
+    grid-template-columns: 100px 1fr 1fr;
+    grid-template-rows: 50px;
+
+    grid-template-areas:
+        "title title title"
+        "form form img-product";
+
+    a {
+        text-decoration: none;
+        color: #118800;
+        font-weight: bolder;
+    }
+    
+    h3 {
+        grid-area: title;
+        text-align: center;
+        font-weight: bolder;
+    }
+}
