--- a/sources/styles/components/button.scss
+++ b/sources/styles/components/button.scss
@@ -3,8 +3,10 @@
   justify-content: center;
   align-items: center;
   border-radius: 0.5rem;
-  padding: 0.5rem 1.5rem;
+  padding: 0.5rem 1.3rem;
+  border: none;
   color: white;
+  font-weight: bold;
 }
 
 .base-btn:hover {
