--- a/sources/styles/components/setting.scss
+++ b/sources/styles/components/setting.scss
@@ -12,9 +12,16 @@
 .icon-languages {
   display: flex;
   gap: 2rem;
+  height: 70px;
 
   img {
     width: 35px;
+
+    &:hover {
+      cursor: pointer;
+      transform: scale(1.1);
+      transition: all 0.2s ease-in-out;
+    }
   }
 }
 
