--- a/sources/styles/components/table.scss
+++ b/sources/styles/components/table.scss
@@ -1,3 +1,5 @@
+@use '../default/custom.scss';
+
 /* tabel */
 table {
     width: 100%;
@@ -6,36 +8,36 @@ table {
 }
 
 thead th {
-    border-bottom: #2B2B2B 1px solid;
+    border-bottom: custom.$color-secondary 1px solid;
     position: sticky;
     top: 0;
-    background: white;
+    background: custom.$color-primary;
     z-index: 2;
     padding: 10px;
 }
 
 tbody td {
-    border-bottom: #2B2B2B 1px solid;
+    border-bottom: custom.$color-secondary 1px solid;
     padding-inline: 10px;
-
 }
 
 // tabel dashboard
 .table-dashboard {
     width: 100%;
     border-radius: 12px;
-    max-height: 300px;
+    max-height: 250px;
     overflow-y: auto;
-    border: 1px solid #ddd;
+    // border: 1px solid custom.$code-product;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
     a {
         text-decoration: none;
-        color: #118800;
+        color: custom.$color-tertiary;
 
         &:hover {
-            color: white;
+            color: custom.$color-primary;
             padding: 0.2rem 0.5rem;
-            background-color: #118800;
+            background-color: custom.$color-tertiary;
             border-radius: 4px;
             transition: all 0.2s ease-in-out;
         }
@@ -46,7 +48,7 @@ tbody td {
     }
     
     .code {
-        color: #8D8D8D;
+        color: custom.$code-product;
         margin-bottom: 0;
     }
 
