--- a/sources/styles/default/custom.scss
+++ b/sources/styles/default/custom.scss
@@ -4,7 +4,7 @@ $color-secondary: #2B2B2B;
 $color-tertiary: #118800;
 $code-product: #8D8D8D;
 $warning: #EFAC00;
-$danger: #FF6060;
+$danger: #AE0000;
 
 /* mixins */
 @mixin flex-center {
