tambah icon di dashboard

--- a/sources/styles/default/custom.scss
+++ b/sources/styles/default/custom.scss
@@ -5,6 +5,7 @@ $color-tertiary: #118800;
 $code-product: #8D8D8D;
 $warning: #EFAC00;
 $danger: #cf0000;
+$dark-green: #0C6400;
 
 /* mixins */
 @mixin flex-center {
