--- a/sources/styles/components/button.scss
+++ b/sources/styles/components/button.scss
@@ -3,12 +3,15 @@
 .base-btn {
   @include custom.flex-center;
   border-radius: 0.5rem;
-  padding: 0.5rem 1.3rem;
+  padding: 0.5rem 1rem;
   border: none;
+  color: custom.$color-primary;
   font-weight: bold;
+  gap: 0.5rem;
 
   &:hover {
     cursor: pointer;
+    color: custom.$color-primary;
     transition: all 0.2s ease-in-out;
   } 
 }
@@ -53,7 +56,6 @@
   color: custom.$color-secondary;
 
   &:hover {
-    color: custom.$color-primary;
     background-color: custom.$dark-green;
   }
 
