--- a/sources/styles/default/main.scss
+++ b/sources/styles/default/main.scss
@@ -94,18 +94,6 @@ header {
     @include custom.flex-column;
     gap: 8rem;
 
-    ul {
-        padding: 0;
-        margin: 0;
-    }
-
-    li {
-        list-style: none;
-        @include custom.flex-align-center;
-        gap: 1rem;
-        padding-block: 0.5rem;
-    }
-
     a {
         text-decoration: none;
         font-weight: bolder;
@@ -113,8 +101,20 @@ header {
     }
 }
 
+ul {
+    padding: 0;
+    margin: 0;
+}
+
+li {
+    list-style: none;
+    @include custom.flex-align-center;
+    gap: 1rem;
+    padding-block: 0.5rem;
+}
+
 .icon {
-    fill: aqua;
+    width: 24px;
 }
 
 .companies-name {
@@ -134,7 +134,6 @@ header {
 .content {
     margin: 1rem;
     border-radius: 12px;
-    background-color: custom.$color-primary;
     color: custom.$color-secondary;
 }
 
