--- a/sources/styles/components/form.scss
+++ b/sources/styles/components/form.scss
@@ -4,9 +4,9 @@
 input, select {
     width: 250px;
     height: 25px;
-    border-radius: 4px;
-    background-color: custom.$color-secondary;
-    color: custom.$color-primary;
+    border-radius: 16px;
+    color: custom.$color-secondary;
+    padding: 0 0.5rem;
 }
 
 .inputan {
