tambah halaman inventori

--- a/sources/styles/default/main.scss
+++ b/sources/styles/default/main.scss
@@ -95,8 +95,6 @@ header {
     gap: 8rem;
 
     a {
-        text-decoration: none;
-        font-weight: bolder;
         color: custom.$color-primary;
     }
 }
@@ -111,6 +109,11 @@ li {
     @include custom.flex-align-center;
     gap: 1rem;
     padding-block: 0.5rem;
+}
+
+a {
+    text-decoration: none;
+    font-weight: bolder;
 }
 
 .icon {
