--- a/sources/styles/components/product.scss
+++ b/sources/styles/components/product.scss
@@ -14,6 +14,9 @@
 }
 
 .nav-product {
+  a {
+    color: custom.$color-secondary;
+  }
 
   ul {
     display: flex;
@@ -29,6 +32,10 @@
       color: custom.$color-primary;
       background-color: custom.$color-secondary;
       border-radius: 4px;
+
+      a {
+        color: custom.$color-primary;
+      }
 
       .icon {
         color: custom.$color-tertiary;
