perbaiki struktur nav-product

--- a/sources/styles/components/product.scss
+++ b/sources/styles/components/product.scss
@@ -7,29 +7,24 @@
 }
 
 .nav-product {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
   a {
     color: custom.$color-secondary;
-  }
-
-  ul {
-    display: flex;
-    gap: 1rem;
-  }
-
-  li {
     height: 30px;
     padding: 0.5rem;
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
 
     &:hover {
       cursor: pointer;
       color: custom.$color-primary;
       background-color: custom.$color-secondary;
       border-radius: 4px;
-
-      a {
-        color: custom.$color-primary;
-      }
-
+      
       .icon {
         color: custom.$color-tertiary;
       }
@@ -37,11 +32,25 @@
   }
 }
 
-.header-product-page, .header-inventory {
+.header-product-page, .header-inventory, .header-distribution {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   height: 35px;
-  font-size: 0.8rem;
+  padding-block: 1rem;
+  font-size: 1rem;
+  font-weight: bolder;
+
+  .button {
+    height: 35px;
+    display: flex;
+    gap: 1rem;
+
+    p {
+      padding: 0;
+      margin: 0;
+    }
+  }
 }
 
 .search-filter {
