--- a/sources/styles/components/setting.scss
+++ b/sources/styles/components/setting.scss
@@ -1,5 +1,19 @@
 @use '../default/custom.scss';
 
+.user-setting {
+  background-color: #e4e3e3;
+  border-radius: 8px;
+}
+
+.header-user-setting {
+  padding-inline: 1rem;
+  
+  .title {
+    @include custom.flex-align-center;
+    gap: 1rem;
+  }
+}
+
 .other-setting {
   display: grid;
   grid-template-columns: 1fr 1fr;
