--- a/sources/styles/components/setting.scss
+++ b/sources/styles/components/setting.scss
@@ -1,10 +1,5 @@
 @use '../default/custom.scss';
 
-.user-setting {
-  background-color: #e4e3e3;
-  border-radius: 8px;
-}
-
 .user-display {
   padding: 1rem;
 }
@@ -33,6 +28,12 @@
   justify-content: space-between;
 }
 
+.setting {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 .other-setting {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -52,11 +53,16 @@
 
 .languages-setting {
   grid-area: languagesSetting;
-  background-color: #e4e3e3;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
 }
 .clear-data-setting {
   grid-area: clearDataSetting;
+  padding: 0.5rem 1rem;
+}
+
+.languages-setting, .clear-data-setting, .user-setting {
+  background-color: #e4e3e3;
+  border-radius: 8px;
 }
 
 .icon-languages {
@@ -77,6 +83,17 @@
 
 .language {
   @include custom.flex-column;
+}
+
+.sub-setting {
+  h5 {
+    margin: 0;
+    padding: 0;
+  }
+
+  p {
+    font-size: 0.8rem
+  }
 }
 
 .btn-setting {
