--- a/sources/styles/components/product.scss
+++ b/sources/styles/components/product.scss
@@ -6,6 +6,10 @@
   gap: 0.5rem;
 }
 
+.inventory-display, .product-display .title, .header-distribution-history {
+  font-weight: bolder
+}
+
 .nav-product {
   @include custom.flex-align-center;
   gap: 1rem;
@@ -34,12 +38,11 @@
   padding-block: 1rem;
 }
 
-.header-product-page, .header-inventory, .header-distribution, .header-user-setting {
+.header-product-page, .header-inventory, .header-distribution, .header-user-setting, .distribution-display {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 35px;
-  font-weight: bolder;
 
   .button {
     height: 35px;
@@ -131,4 +134,10 @@
       font-weight: bolder;
     }
   }
+}
+
+.main-distribution {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
