--- a/sources/styles/default/main.scss
+++ b/sources/styles/default/main.scss
@@ -154,7 +154,7 @@ a {
 }
 
 
-.product-display, .inventory-display {
+.product-display, .inventory-display, .main-distribution {
   height: 70vh;
   background-color: #e4e3e3;
   padding: 0.5rem 1rem;
