--- a/sources/styles/default/main.scss
+++ b/sources/styles/default/main.scss
@@ -141,7 +141,7 @@ a {
 }
 
 /* product page */
-.main-product, .main-inventory, .main-user {
+.main-product, .main-inventory, .main-user, .main-distribution {
   position: relative;
 }
 
