--- a/sources/styles/components/table.scss
+++ b/sources/styles/components/table.scss
@@ -39,6 +39,13 @@ tbody td {
     max-height: 150px;
 }
 
+.table-display {
+    select {
+        border: none;
+        background-color: transparent;
+    }
+}
+
 .table-dashboard, .table-user, .table-display {
     width: 100%;
     border-radius: 12px;
