--- a/sources/styles/components/form.scss
+++ b/sources/styles/components/form.scss
@@ -44,11 +44,19 @@ label {
   }
 
   .double-form {
-    display: flex;
+    display: grid;
+    grid-template-columns: 200px 100px;
     gap: 0.5rem;
   }
 
   .inputan {
+    padding-bottom: 1rem;
+  }
+
+  .right-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     padding-bottom: 1rem;
   }
 }
@@ -114,4 +122,27 @@ label {
   label {
     padding-inline: 0.5rem;
   }
+}
+
+.detail-product {
+  display: flex;
+  flex-direction: column;
+  width: 180px;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+
+  p {
+    margin: 0;
+  }
+}
+
+.display-detail {
+  border: 1px solid custom.$color-secondary;
+  border-radius: 4px;
+  padding: 0.5rem;
+}
+
+.products, .total {
+  display: flex;
+  gap: 0.5rem;
 }
