--- a/sources/styles/components/form.scss
+++ b/sources/styles/components/form.scss
@@ -92,6 +92,10 @@ label {
   .text-end {
     text-align: end;
   }
+
+  .counting {
+    font-size: 1rem;
+  }
 }
 
 .form-product, .form-user, .form-data-distribution {
@@ -160,15 +164,21 @@ label {
 }
 
 .detail-product {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  width: 180px;
-  font-size: 0.8rem;
-  margin-bottom: 1rem;
+  justify-content: flex-end;
 
   p {
     margin: 0;
   }
+}
+
+.detail-container {
+  width: 180px;
+  font-size: 0.8rem;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .display-detail {
