--- a/sources/styles/components/form.scss
+++ b/sources/styles/components/form.scss
@@ -47,6 +47,10 @@ label {
     grid-template-columns: 200px 100px;
     gap: 0.5rem;
     justify-content: center;
+
+    p {
+      font-size: 0.8rem;
+    }
   }
 
   .inputan {
