--- a/frontend/sources/styles/default/dashboard.scss
+++ b/frontend/sources/styles/default/dashboard.scss
@@ -16,11 +16,16 @@
   h3, p {
     margin: 0;
     padding: 0;
+    color: custom.$color-primary;
   }
 }
 
 .table {
   grid-area: dashboard-table;
+
+  .title-table {
+    color: custom.$color-primary;
+  }
 }
 
 .notification-side {
@@ -31,6 +36,7 @@
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  background-color: custom.$color-primary;
 }
 
 .short-panel {
@@ -47,7 +53,16 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
+  background-color: custom.$color-primary;
 }
+
+.notification-side, .panel {
+  &:hover {
+    cursor: pointer;
+    transition: all 0.2s ease-in-out;
+    background-color: rgb(227, 227, 227);
+  }
+} 
 
 .text {
   .title {
