desain card item menyesuaikan dengan background

--- a/frontend/sources/styles/components/inventory-page.scss
+++ b/frontend/sources/styles/components/inventory-page.scss
@@ -20,6 +20,7 @@
 
   border-radius: 8px;
   background-color: custom.$color-primary;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
   &:hover {
     cursor: pointer;
