--- a/frontend/sources/styles/components/product.scss
+++ b/frontend/sources/styles/components/product.scss
@@ -117,6 +117,7 @@
 .product {
   border-radius: 8px;
   background-color: custom.$color-primary;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 
   img {
     margin: 0;
